--- a/_posts/2024-06-17-02_test_1.markdown
+++ b/_posts/2024-06-17-02_test_1.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  "1. Diversifying Revenue Streams"
 # date:   2024-06-17 12:41:32 +0200
 categories: Revenue
-toc: true
+toc: false
 ---
 
 #### **Membership Programs and Fundraising**
