--- a/_posts/2024-06-17-01_test_2.markdown
+++ b/_posts/2024-06-17-01_test_2.markdown
@@ -15,4 +15,4 @@ Active engagement on social media platforms can help museums reach new audiences
 #### **Data Analytics for Visitor Insights**
 Utilizing data analytics can help museums understand visitor behaviors, preferences, and trends. This information can guide exhibition planning, marketing strategies, and personalized visitor experiences.
 
-![Uploading file-6113d5f8845dc.jpeg…]()
+![file-6113d5f8845dc](https://github.com/aslashzandt/aslashzandt.github.io/assets/47481538/7deeb2ea-98b9-4a7f-8815-36035d6d7b14)
